--- a/package.json
+++ b/package.json
@@ -1,43 +1,57 @@
 {
-  "name": "inventory-app",
+  "name": "invoice-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@auth/prisma-adapter": "^1.5.1",
     "@hookform/resolvers": "^3.3.4",
-    "@mui/material": "^5.15.14",
-    "@mui/x-charts": "^7.1.0",
+    "@prisma/client": "^5.11.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "0.0.16",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
-    "lucide-react": "^0.364.0",
+    "framer-motion": "^11.0.24",
+    "lucide-react": "^0.365.0",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.15",
+    "next-themes": "^0.3.0",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.2.2",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
