--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "invoice-app",
+  "name": "inventory-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,9 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.5.1",
+    "@auth/prisma-adapter": "^1.5.2",
+    "@edgestore/react": "^0.1.6",
+    "@edgestore/server": "^0.1.6",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-checkbox": "^1.0.4",
