--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
+    "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
