--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.12.6",
     "resend": "^3.2.0",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2",
